improved graphics + improved synchronization