@@ -37,9 +37,9 @@ import org.eclipse.xtext.xbase.lib.Pure;
 /**
  * @author ma-pe
  */
+@SuppressWarnings("potential_field_synchronization_problem")
 @SarlSpecification("0.10")
 @SarlElementType(19)
-@SuppressWarnings("all")
 public class TravelerAgent extends Agent {
   private Environment env;
   
@@ -58,144 +58,93 @@ public class TravelerAgent extends Agent {
   private Boolean isDebugMode;
   
   private void $behaviorUnit$Initialize$0(final Initialize occurrence) {
-    synchronized (this) {
-      Object _get = occurrence.parameters[0];
-      this.env = ((Environment) _get);
-      Object _get_1 = occurrence.parameters[1];
-      this.met = ((Metrics) _get_1);
-      Object _get_2 = occurrence.parameters[2];
-      this.startingCity = ((City) _get_2);
-      Object _get_3 = occurrence.parameters[3];
-      this.isDebugMode = ((Boolean) _get_3);
-      this.currentCity = this.startingCity;
-      HashSet<City> _hashSet = new HashSet<City>();
-      this.visitedCities = _hashSet;
-      this.visitedCities.add(this.startingCity);
-      ArrayList<Road> _arrayList = new ArrayList<Road>();
-      this.travelledRoads = _arrayList;
-      Long _long = new Long(0);
-      this.travelTime = _long;
-      Logging _$CAPACITY_USE$IO_SARL_CORE_LOGGING$CALLER = this.$castSkill(Logging.class, (this.$CAPACITY_USE$IO_SARL_CORE_LOGGING == null || this.$CAPACITY_USE$IO_SARL_CORE_LOGGING.get() == null) ? (this.$CAPACITY_USE$IO_SARL_CORE_LOGGING = this.$getSkill(Logging.class)) : this.$CAPACITY_USE$IO_SARL_CORE_LOGGING);
-      Integer _roundsElapsed = this.met.getRoundsElapsed();
-      String _name = this.startingCity.getName();
-      _$CAPACITY_USE$IO_SARL_CORE_LOGGING$CALLER.setLoggingName(((("Traveler Agent - Round " + _roundsElapsed) + " - Starting city ") + _name));
-      if (((this.isDebugMode) == null ? false : (this.isDebugMode).booleanValue())) {
-        Logging _$CAPACITY_USE$IO_SARL_CORE_LOGGING$CALLER_1 = this.$castSkill(Logging.class, (this.$CAPACITY_USE$IO_SARL_CORE_LOGGING == null || this.$CAPACITY_USE$IO_SARL_CORE_LOGGING.get() == null) ? (this.$CAPACITY_USE$IO_SARL_CORE_LOGGING = this.$getSkill(Logging.class)) : this.$CAPACITY_USE$IO_SARL_CORE_LOGGING);
-        _$CAPACITY_USE$IO_SARL_CORE_LOGGING$CALLER_1.info("Traveler agent spawned !");
-      }
-      this.travel();
+    Object _get = occurrence.parameters[0];
+    this.env = ((Environment) _get);
+    Object _get_1 = occurrence.parameters[1];
+    this.met = ((Metrics) _get_1);
+    Object _get_2 = occurrence.parameters[2];
+    this.startingCity = ((City) _get_2);
+    Object _get_3 = occurrence.parameters[3];
+    this.isDebugMode = ((Boolean) _get_3);
+    this.currentCity = this.startingCity;
+    HashSet<City> _hashSet = new HashSet<City>();
+    this.visitedCities = _hashSet;
+    this.visitedCities.add(this.startingCity);
+    ArrayList<Road> _arrayList = new ArrayList<Road>();
+    this.travelledRoads = _arrayList;
+    Long _long = new Long(0);
+    this.travelTime = _long;
+    Logging _$CAPACITY_USE$IO_SARL_CORE_LOGGING$CALLER = this.$castSkill(Logging.class, (this.$CAPACITY_USE$IO_SARL_CORE_LOGGING == null || this.$CAPACITY_USE$IO_SARL_CORE_LOGGING.get() == null) ? (this.$CAPACITY_USE$IO_SARL_CORE_LOGGING = this.$getSkill(Logging.class)) : this.$CAPACITY_USE$IO_SARL_CORE_LOGGING);
+    Integer _roundsElapsed = this.met.getRoundsElapsed();
+    String _name = this.startingCity.getName();
+    _$CAPACITY_USE$IO_SARL_CORE_LOGGING$CALLER.setLoggingName(((("Traveler Agent - Round " + _roundsElapsed) + " - Starting city ") + _name));
+    if (((this.isDebugMode) == null ? false : (this.isDebugMode).booleanValue())) {
+      Logging _$CAPACITY_USE$IO_SARL_CORE_LOGGING$CALLER_1 = this.$castSkill(Logging.class, (this.$CAPACITY_USE$IO_SARL_CORE_LOGGING == null || this.$CAPACITY_USE$IO_SARL_CORE_LOGGING.get() == null) ? (this.$CAPACITY_USE$IO_SARL_CORE_LOGGING = this.$getSkill(Logging.class)) : this.$CAPACITY_USE$IO_SARL_CORE_LOGGING);
+      _$CAPACITY_USE$IO_SARL_CORE_LOGGING$CALLER_1.info("Traveler agent spawned !");
     }
+    this.travel();
   }
   
   protected void travel() {
-    synchronized (this) {
-      Road road = null;
-      while (((this.visitedCities.size() != this.env.cities.size()) || (!Objects.equal(this.currentCity, this.startingCity)))) {
-        {
-          road = this.pickRoad();
-          Long _timeTaken = road.getTimeTaken();
-          this.travelTime = Long.valueOf((((this.travelTime) == null ? 0 : (this.travelTime).longValue()) + ((_timeTaken) == null ? 0 : (_timeTaken).longValue())));
-          this.travelledRoads.add(road);
-          this.visitedCities.addAll(road.getCities());
-          this.currentCity = road.travel(this.currentCity);
-        }
+    Road road = null;
+    while (((this.visitedCities.size() != this.env.cities.size()) || (!Objects.equal(this.currentCity, this.startingCity)))) {
+      {
+        road = this.pickRoad();
+        Long _timeTaken = road.getTimeTaken();
+        this.travelTime = Long.valueOf((((this.travelTime) == null ? 0 : (this.travelTime).longValue()) + ((_timeTaken) == null ? 0 : (_timeTaken).longValue())));
+        this.travelledRoads.add(road);
+        this.visitedCities.addAll(road.getCities());
+        this.currentCity = road.travel(this.currentCity);
       }
-      DefaultContextInteractions _$CAPACITY_USE$IO_SARL_CORE_DEFAULTCONTEXTINTERACTIONS$CALLER = this.$castSkill(DefaultContextInteractions.class, (this.$CAPACITY_USE$IO_SARL_CORE_DEFAULTCONTEXTINTERACTIONS == null || this.$CAPACITY_USE$IO_SARL_CORE_DEFAULTCONTEXTINTERACTIONS.get() == null) ? (this.$CAPACITY_USE$IO_SARL_CORE_DEFAULTCONTEXTINTERACTIONS = this.$getSkill(DefaultContextInteractions.class)) : this.$CAPACITY_USE$IO_SARL_CORE_DEFAULTCONTEXTINTERACTIONS);
-      TravelsFinished _travelsFinished = new TravelsFinished(this.travelledRoads, this.travelTime);
-      _$CAPACITY_USE$IO_SARL_CORE_DEFAULTCONTEXTINTERACTIONS$CALLER.emit(_travelsFinished);
-      Lifecycle _$CAPACITY_USE$IO_SARL_CORE_LIFECYCLE$CALLER = this.$castSkill(Lifecycle.class, (this.$CAPACITY_USE$IO_SARL_CORE_LIFECYCLE == null || this.$CAPACITY_USE$IO_SARL_CORE_LIFECYCLE.get() == null) ? (this.$CAPACITY_USE$IO_SARL_CORE_LIFECYCLE = this.$getSkill(Lifecycle.class)) : this.$CAPACITY_USE$IO_SARL_CORE_LIFECYCLE);
-      _$CAPACITY_USE$IO_SARL_CORE_LIFECYCLE$CALLER.killMe();
     }
+    DefaultContextInteractions _$CAPACITY_USE$IO_SARL_CORE_DEFAULTCONTEXTINTERACTIONS$CALLER = this.$castSkill(DefaultContextInteractions.class, (this.$CAPACITY_USE$IO_SARL_CORE_DEFAULTCONTEXTINTERACTIONS == null || this.$CAPACITY_USE$IO_SARL_CORE_DEFAULTCONTEXTINTERACTIONS.get() == null) ? (this.$CAPACITY_USE$IO_SARL_CORE_DEFAULTCONTEXTINTERACTIONS = this.$getSkill(DefaultContextInteractions.class)) : this.$CAPACITY_USE$IO_SARL_CORE_DEFAULTCONTEXTINTERACTIONS);
+    TravelsFinished _travelsFinished = new TravelsFinished(this.travelledRoads, this.travelTime);
+    _$CAPACITY_USE$IO_SARL_CORE_DEFAULTCONTEXTINTERACTIONS$CALLER.emit(_travelsFinished);
+    Lifecycle _$CAPACITY_USE$IO_SARL_CORE_LIFECYCLE$CALLER = this.$castSkill(Lifecycle.class, (this.$CAPACITY_USE$IO_SARL_CORE_LIFECYCLE == null || this.$CAPACITY_USE$IO_SARL_CORE_LIFECYCLE.get() == null) ? (this.$CAPACITY_USE$IO_SARL_CORE_LIFECYCLE = this.$getSkill(Lifecycle.class)) : this.$CAPACITY_USE$IO_SARL_CORE_LIFECYCLE);
+    _$CAPACITY_USE$IO_SARL_CORE_LIFECYCLE$CALLER.killMe();
   }
   
   @Pure
   protected Road pickRoad() {
-    synchronized (this) {
-      Road chosenRoad = null;
-      List<Road> availableRoads = new ArrayList<Road>();
-      Float reverseWeights = new Float(0);
-      Float NormalizedReverseWeights = new Float(0);
-      Float cumulativeNormalizedReverseWeights = new Float(0);
-      Float totalWeights = new Float(0);
-      Float totalReverseWeights = new Float(0);
-      Float rng = Float.valueOf(new Random().nextFloat());
-      availableRoads = this.env.getAdjacentRoads(this.currentCity);
-      Road.sortRoadsByWeights(availableRoads);
-      for (final Road road : availableRoads) {
-        Long _weight = road.getWeight();
-        totalWeights = Float.valueOf((((totalWeights) == null ? 0 : (totalWeights).floatValue()) + ((_weight) == null ? 0 : (_weight).longValue())));
-      }
-      for (final Road road_1 : availableRoads) {
-        Long _weight_1 = road_1.getWeight();
-        totalReverseWeights = Float.valueOf(((((totalReverseWeights) == null ? 0 : (totalReverseWeights).floatValue()) + ((totalWeights) == null ? 0 : (totalWeights).floatValue())) - ((_weight_1) == null ? 0 : (_weight_1).longValue())));
-      }
-      for (final Road road_2 : availableRoads) {
-        if ((chosenRoad == null)) {
-          if ((totalWeights != null && (totalWeights.floatValue() == 0))) {
-            int _size = availableRoads.size();
-            cumulativeNormalizedReverseWeights = Float.valueOf((((cumulativeNormalizedReverseWeights) == null ? 0 : (cumulativeNormalizedReverseWeights).floatValue()) + 
-              (1f / _size)));
-            if ((rng.floatValue() < cumulativeNormalizedReverseWeights.doubleValue())) {
-              chosenRoad = road_2;
-            }
-          } else {
-            Long _weight_2 = road_2.getWeight();
-            reverseWeights = Float.valueOf((((totalWeights) == null ? 0 : (totalWeights).floatValue()) - ((_weight_2) == null ? 0 : (_weight_2).longValue())));
-            NormalizedReverseWeights = Float.valueOf((((reverseWeights) == null ? 0 : (reverseWeights).floatValue()) / ((totalReverseWeights) == null ? 0 : (totalReverseWeights).floatValue())));
-            cumulativeNormalizedReverseWeights = Float.valueOf((((cumulativeNormalizedReverseWeights) == null ? 0 : (cumulativeNormalizedReverseWeights).floatValue()) + ((NormalizedReverseWeights) == null ? 0 : (NormalizedReverseWeights).floatValue())));
-            if ((rng.floatValue() < cumulativeNormalizedReverseWeights.doubleValue())) {
-              chosenRoad = road_2;
-            }
+    Road chosenRoad = null;
+    List<Road> availableRoads = new ArrayList<Road>();
+    Float reverseWeights = new Float(0);
+    Float NormalizedReverseWeights = new Float(0);
+    Float cumulativeNormalizedReverseWeights = new Float(0);
+    Float totalWeights = new Float(0);
+    Float totalReverseWeights = new Float(0);
+    Float rng = Float.valueOf(new Random().nextFloat());
+    availableRoads = this.env.getAdjacentRoads(this.currentCity);
+    Road.sortRoadsByWeights(availableRoads);
+    for (final Road road : availableRoads) {
+      Long _weight = road.getWeight();
+      totalWeights = Float.valueOf((((totalWeights) == null ? 0 : (totalWeights).floatValue()) + ((_weight) == null ? 0 : (_weight).longValue())));
+    }
+    for (final Road road_1 : availableRoads) {
+      Long _weight_1 = road_1.getWeight();
+      totalReverseWeights = Float.valueOf(((((totalReverseWeights) == null ? 0 : (totalReverseWeights).floatValue()) + ((totalWeights) == null ? 0 : (totalWeights).floatValue())) - ((_weight_1) == null ? 0 : (_weight_1).longValue())));
+    }
+    for (final Road road_2 : availableRoads) {
+      if ((chosenRoad == null)) {
+        if ((totalWeights != null && (totalWeights.floatValue() == 0))) {
+          int _size = availableRoads.size();
+          cumulativeNormalizedReverseWeights = Float.valueOf((((cumulativeNormalizedReverseWeights) == null ? 0 : (cumulativeNormalizedReverseWeights).floatValue()) + 
+            (1f / _size)));
+          if ((rng.floatValue() < cumulativeNormalizedReverseWeights.doubleValue())) {
+            chosenRoad = road_2;
+          }
+        } else {
+          Long _weight_2 = road_2.getWeight();
+          reverseWeights = Float.valueOf((((totalWeights) == null ? 0 : (totalWeights).floatValue()) - ((_weight_2) == null ? 0 : (_weight_2).longValue())));
+          NormalizedReverseWeights = Float.valueOf((((reverseWeights) == null ? 0 : (reverseWeights).floatValue()) / ((totalReverseWeights) == null ? 0 : (totalReverseWeights).floatValue())));
+          cumulativeNormalizedReverseWeights = Float.valueOf((((cumulativeNormalizedReverseWeights) == null ? 0 : (cumulativeNormalizedReverseWeights).floatValue()) + ((NormalizedReverseWeights) == null ? 0 : (NormalizedReverseWeights).floatValue())));
+          if ((rng.floatValue() < cumulativeNormalizedReverseWeights.doubleValue())) {
+            chosenRoad = road_2;
           }
         }
       }
-      return chosenRoad;
     }
-  }
-  
-  @Pure
-  protected Road pickRoadAlt() {
-    synchronized (this) {
-      Road chosenRoad = null;
-      List<Road> availableRoads = new ArrayList<Road>();
-      Float reverseWeights = new Float(0);
-      Float NormalizedReverseWeights = new Float(0);
-      Float cumulativeNormalizedReverseWeights = new Float(0);
-      Float totalWeights = new Float(0);
-      Float totalReverseWeights = new Float(0);
-      Float rng = Float.valueOf(new Random().nextFloat());
-      availableRoads = this.env.getAdjacentRoads(this.currentCity);
-      Road.sortRoadsByWeights(availableRoads);
-      for (final Road road : availableRoads) {
-        Long _weight = road.getWeight();
-        totalWeights = Float.valueOf((((totalWeights) == null ? 0 : (totalWeights).floatValue()) + ((_weight) == null ? 0 : (_weight).longValue())));
-      }
-      for (final Road road_1 : availableRoads) {
-        Long _weight_1 = road_1.getWeight();
-        totalReverseWeights = Float.valueOf(((((totalReverseWeights) == null ? 0 : (totalReverseWeights).floatValue()) + ((totalWeights) == null ? 0 : (totalWeights).floatValue())) - ((_weight_1) == null ? 0 : (_weight_1).longValue())));
-      }
-      for (final Road road_2 : availableRoads) {
-        if ((chosenRoad == null)) {
-          if ((totalWeights != null && (totalWeights.floatValue() == 0))) {
-            int _size = availableRoads.size();
-            cumulativeNormalizedReverseWeights = Float.valueOf((((cumulativeNormalizedReverseWeights) == null ? 0 : (cumulativeNormalizedReverseWeights).floatValue()) + 
-              (1f / _size)));
-            if ((rng.floatValue() < cumulativeNormalizedReverseWeights.doubleValue())) {
-              chosenRoad = road_2;
-            }
-          } else {
-            Long _weight_2 = road_2.getWeight();
-            reverseWeights = Float.valueOf((((totalReverseWeights) == null ? 0 : (totalReverseWeights).floatValue()) - ((_weight_2) == null ? 0 : (_weight_2).longValue())));
-            NormalizedReverseWeights = Float.valueOf((((reverseWeights) == null ? 0 : (reverseWeights).floatValue()) / ((totalReverseWeights) == null ? 0 : (totalReverseWeights).floatValue())));
-            cumulativeNormalizedReverseWeights = Float.valueOf((((cumulativeNormalizedReverseWeights) == null ? 0 : (cumulativeNormalizedReverseWeights).floatValue()) + ((NormalizedReverseWeights) == null ? 0 : (NormalizedReverseWeights).floatValue())));
-            if ((rng.floatValue() < cumulativeNormalizedReverseWeights.doubleValue())) {
-              chosenRoad = road_2;
-            }
-          }
-        }
-      }
-      return chosenRoad;
-    }
+    return chosenRoad;
   }
   
   private void $behaviorUnit$ExitApplicationEvent$1(final ExitApplicationEvent occurrence) {
@@ -204,11 +153,9 @@ public class TravelerAgent extends Agent {
   }
   
   private void $behaviorUnit$Destroy$2(final Destroy occurrence) {
-    synchronized (this) {
-      if (((this.isDebugMode) == null ? false : (this.isDebugMode).booleanValue())) {
-        Logging _$CAPACITY_USE$IO_SARL_CORE_LOGGING$CALLER = this.$castSkill(Logging.class, (this.$CAPACITY_USE$IO_SARL_CORE_LOGGING == null || this.$CAPACITY_USE$IO_SARL_CORE_LOGGING.get() == null) ? (this.$CAPACITY_USE$IO_SARL_CORE_LOGGING = this.$getSkill(Logging.class)) : this.$CAPACITY_USE$IO_SARL_CORE_LOGGING);
-        _$CAPACITY_USE$IO_SARL_CORE_LOGGING$CALLER.info("The traveler agent was stopped.");
-      }
+    if (((this.isDebugMode) == null ? false : (this.isDebugMode).booleanValue())) {
+      Logging _$CAPACITY_USE$IO_SARL_CORE_LOGGING$CALLER = this.$castSkill(Logging.class, (this.$CAPACITY_USE$IO_SARL_CORE_LOGGING == null || this.$CAPACITY_USE$IO_SARL_CORE_LOGGING.get() == null) ? (this.$CAPACITY_USE$IO_SARL_CORE_LOGGING = this.$getSkill(Logging.class)) : this.$CAPACITY_USE$IO_SARL_CORE_LOGGING);
+      _$CAPACITY_USE$IO_SARL_CORE_LOGGING$CALLER.info("The traveler agent was stopped.");
     }
   }
   
